[package]
name = "evm-tool"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
hex-literal = "0.3"

[[bin]]
name = "disasm"
path = "bin/disasm.rs"

[[bin]]
name = "lex"
path = "bin/lex.rs"
